--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ dependencies {
 	compile("joda-time:joda-time:2.3")
 	compile("org.aspectj:aspectjrt:1.8.9")
 	compile("com.jamesmurty.utils:java-xmlbuilder:1.1")
+	compile("org.glassfish.jersey.media:jersey-media-multipart:2.7")
 	runtime('mysql:mysql-connector-java:5.1.38')
+
 	testCompile("junit:junit:4.12")
 }
 
